--- a/ChocoLink.API/appsettings.json
+++ b/ChocoLink.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfig": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Usuario": "f3f6f3654839c4",
+    "Senha": "7693432a039d21"
+  },
+  "token": {
+    "secret": "567EBEDE-F4E8-4CA8-AE69-3965B46DE2EE",
+    "issuer": "h1.com.br",
+    "audience": "audience"
+  },
   "AllowedHosts": "*"
 }
