--- a/ChocoLink.Application/ChocoLink.Application.csproj
+++ b/ChocoLink.Application/ChocoLink.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ChocoLink.Domain\ChocoLink.Domain.csproj" />
     <ProjectReference Include="..\ChocoLink.Infra\ChocoLink.Infra.csproj" />
   </ItemGroup>
